--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>2.0.1</version>
+            <version>[2.3.3,)</version>
         </dependency>
         <dependency>
             <groupId>cz.adamh.utils</groupId>
